Разделил /api/budget/summary на два эндпоинта: обзор и бюджет
- Создал POST /api/budget/overview для страницы обзора: возвращает
  capital, top-4 категории, тренды capital/expenses/balance
- BudgetSummaryService теперь обслуживает только страницу бюджета:
  убран capital, возвращаются все категории без лимита
- Вынес общую логику в PeriodAggregateService и CategorySummaryBuilder
- Добавил хук useOverviewSummary, Index.tsx переведён на новый эндпоинт
- Budget.tsx инвалидирует оба кэша после мутаций
- Исправлен баг: useDeleteCategory и useUpdateCategory не инвалидировали
  overview-summary
- Оптимизирована загрузка категорий для топ-4: только нужные через findAllById